# volksbot

./: .gitignore  .gitmodules  README.md  sick_error_lms100-v123.txt  sidenotes.md
catkin_ws/src/lms100/: CMakeLists.txt  package.xml
catkin_ws/src/lms100/src/: lms100_cola.cc  sicksensor.cc
catkin_ws/src/volksbot/: CMakeLists.txt  package.xml
catkin_ws/src/volksbot/include/volksbot/: odometry.h
catkin_ws/src/volksbot/launch/config/: costmap_common_params.yaml  global_costmap_params.yaml  mapfile.yaml
catkin_ws/src/volksbot/src/: calibration.cc  kbcontrol.h  odometry_main.cc
catkin_ws/src/volksbot/src/LayerClasses/: CCommunicationLayer.cpp  CVmc.cpp
catkin_ws/src/volksbot/src/SupportClasses/: CData.cpp
catkin_ws/src/volksbot/src/epos2/: epos2.cpp
catkin_ws/src/volksbot/src/joystick/: logitechf710.cc  predator.h
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/gamepad_driver/share/gamepad_driver/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/libsick_ldmrs/share/libsick_ldmrs/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/lms100/share/lms100/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/sick_scan_xd/share/sick_scan_xd/: local_setup.dsv  local_setup.sh  package.bash  package.ps1  package.sh
install/test/share/test/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/volksbot/include/volksbot/: pose2d.h  ticks.h  velocities.h  velocitiesRequest.h  velocitiesResponse.h  vels.h
install/volksbot/share/volksbot/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
lms100/: CMakeLists.txt  package.xml
lms100/src/: sicksensor.cc
log/: latest_build
output/2024-06-17_15_26_29/volksbot/: CMakeLists.txt  package.xml
output/2024-06-17_15_26_29/volksbot/src/LayerClasses/: CMakeLists.txt
output/2024-06-24_13_23_36/volksbot/: CMakeLists.txt
ros2_ws/: volksbuild.sh
ros2_ws/cmake/: project_config.cmake
ros2_ws/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
ros2_ws/src/gamepad_driver/: CMakeLists.txt  README.md  package.xml
ros2_ws/src/gamepad_driver/launch/: gamepad_driver_launch.py
ros2_ws/src/gamepad_driver/src/: device_utils.cpp  device_utils.h  gamepad.cpp  gamepad.h  ros2_logger.h  volksbot_adapter.cpp
ros2_ws/src/keyboard_driver/: CMakeLists.txt  package.xml
ros2_ws/src/keyboard_driver/launch/: keyboard_driver_launch.py
ros2_ws/src/keyboard_driver/src/: kbcontrol.cc  kbcontrol.h
ros2_ws/src/lms_starter/: CMakeLists.txt  README.md  package.xml
ros2_ws/src/lms_starter/launch/: lms_starter_launch.py
ros2_ws/src/lms_starter/src/: main.cc  sick_lms_1xx.launch
ros2_ws/src/motor_controller/: 42-usb-serial-volksbot.rules  CMakeLists.txt  package.xml
ros2_ws/src/motor_controller/launch/: motor_controller_launch.py
ros2_ws/src/motor_controller/src/: DriverInterface.h  controller.cc  ros2_logger.h  volksbot.cc
ros2_ws/src/motor_controller/src/Adapter/: CComAdapter.cpp  IDeviceAdapter.h
ros2_ws/src/motor_controller/src/LayerClasses/: CTranslationLayer.cpp  CVmc.cpp  CVmc.h  CvmcAPI.cpp
ros2_ws/src/motor_controller/src/SupportClasses/: CChannel.cpp  CChannel.h  CRequest.cpp
ros2_ws/src/motor_controller/src/epos/: epos.cpp  epos.h
ros2_ws/src/motor_controller/src/epos2/: epos2.cpp  epos2.h
ros2_ws/src/odometry/: CMakeLists.txt  package.xml
ros2_ws/src/odometry/include/odometry/: odometry.h
ros2_ws/src/odometry/launch/: odometry_launch.py
ros2_ws/src/odometry/src/: odometry.cc  odometry_main.cc
ros2_ws/src/sick_scan_xd/: CMakeLists.txt
ros2_ws/src/sick_scan_xd/launch/: sick_lms_1xx.launch
ros2_ws/src/volksbot/: CMakeLists.txt  package.xml
ros2_ws/src/volksbot/config/: amcl_config.yaml  cartographer2d.lua  costmap_config.yaml  map.yaml  map_hallway.yaml  mymap.pgm  mymap.yaml  rovers.yaml
ros2_ws/src/volksbot/include/volksbot/: odometry.h
ros2_ws/src/volksbot/launch/: cartographer2d.launch  localcalibration_launch.py  nav2_amcl_launch.py  volksbot_launch.py
ros2_ws/src/volksbot/launch/config/: gmapping_cfg.yaml  parameters.yaml
ros2_ws/src/volksbot/launch/lehre/: hector_mapping.launch  messtechnikamcl.launch  messtechnikgmapping.launch
ros2_ws/src/volksbot/launch/parts/: localcalibration.launch  localjoystick.launch
ros2_ws/src/volksbot/src/: calibration.cc  ekf_filter.cc  ekf_filter.h  kbcontrol.cc  kbcontrol.h  odometry.cc  odometry_main.cc  volksbot.cc
ros2_ws/src/volksbot/src/LayerClasses/: CVmc.cpp
ros2_ws/src/volksbot/src/epos2/: epos2.cpp  epos2.h
ros2_ws/src/volksbot/src/joystick/: firejet.cc  firejet.h  jscontrol.cc  logitechf710.cc  logitechf710.h  predator.cc  predator.h
ros2_ws/src/volksbot_interfaces/: CMakeLists.txt  package.xml
ros2_ws/src/volksface/: CMakeLists.txt  logging.md  package.xml
ros2_ws/src/volksface/include/volksface/: ansi.h  logging.h  volksbot.h
ros2_ws/src/volksface/msg/: Gamepad.msg  MCTicks.msg  Rover.msg  WheelMapping.msg
ros2_ws/src/volksface/srv/: Rumble.srv
ros2_ws/src/volkslaunch/: package.xml  setup.cfg  setup.py
src/gamepad_driver/: CMakeLists.txt  package.xml
src/gamepad_driver/src/: device_utils.cpp  gamepad.cpp  gamepad.h  gamepad_control.cpp  logitechf710.cpp  logitechf710.h  volksbot_adapter.cpp  xboxONE.cpp  xboxONE.h
src/gamepad_driver/src2/: firejet.h  joystick.cc  joystick.h
src/lms100/: CMakeLists.txt
src/lms100/src/: scanlistener.cc
src/sick_scan_xd/install/: local_setup.sh  setup.sh
src/sick_scan_xd/log/: latest_build
src/volksbot/: CMakeLists.txt  README  package.xml
src/volksbot/src/: odometry.cc  volksbot.cc
src/volksbot2/: CMakeLists.txt  package.xml
src/volksface/msg/: Gamepad.msg  GpThumbStick.msg
volksbot/: 42-usb-serial-volksbot.rules  CMakeLists.txt
volksbot/launch/config/: allhallwaygmapping.pgm  map_gmapping.pgm  map_gmapping.yaml
volksbot/src/: calibration.cc  odometry_main.cc
volksbot/src/LayerClasses/: CMakeLists.txt
volksbot/src/joystick/: logitechf710.cc
(+2924 files in other folders)
