<?xml version="1.0"?>
<package format="2">
  <name>lms100</name>
  <version>0.0.0</version>
  <description>Driver for the lms100</description>
  <maintainer email="borrmann@informatik.uni-wuerzburg.de">Dorit Borrmann</maintainer>
  <license>BSD</license>
  
  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>std_msgs</depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>rclcpp</build_depend>
  <exec_depend>message_runtime</exec_depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>
