<?xml version='1.0' encoding='utf-8'?>
<package format="3">
  <name>volksbot</name>
  <version>0.0.1</version>
  <description>volksbot</description>
  <maintainer email="borrmann@informatik.uni-wuerzburg.de">Dorit Borrmann</maintainer>
  <license>BSD</license>
  <url>http://ros.org/wiki/volksbot</url>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>rclcpp</build_depend>
  <build_depend>std_srvs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>move_base</build_depend>
  <build_depend>lms100</build_depend>
  <build_depend>builtin_interfaces</build_depend>
  <exec_depend>amcl</exec_depend>
  <exec_depend>gmapping</exec_depend>
  <exec_depend>rclcpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>builtin_interfaces</exec_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>
  <export>
    <cpp cflags="-I${prefix}/include" lflags="-L${prefix}/lib -lodo" />
  </export>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
