<?xml version="1.0"?>
<?xml-model
  href="http://download.ros.org/schema/package_format3.xsd"
  schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>lms_starter</name>
  <version>0.0.1</version>
  <description>sick lms100 starter for volksbot</description>
  <maintainer email="nico.schubert@tud-mail.uni-wuerzburg.de">Nico Schubert</maintainer>
  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>rosidl_default_generators</build_depend>
  
  <depend>volksface</depend>
  <!-- <depend>sick_scan</depend> -->
  
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <exec_depend>rosidl_default_runtime</exec_depend>
  

  <export>
    <cpp cflags="-I${prefix}/include" lflags="-L${prefix}/lib -lodo"/>
    <build_type>ament_cmake</build_type>
  </export>

  <member_of_group>rosidl_interface_packages</member_of_group>
</package>
