<?xml version="1.0"?>
<?xml-model
  href="http://download.ros.org/schema/package_format3.xsd"
  schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>motor_controller</name>
  <version>0.0.1</version>
  <description>lightweight interface between ROS2 and EPOS2 and VMC motor controllers</description>
  <maintainer email="nico.schubert@stud-mail.uni-wuerzburg.de">Nico Schubert</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  
  <!-- Messages and Services -->
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>volksface</depend>
  
  <build_depend>tf2_geometry_msgs</build_depend>
  <build_depend>move_base</build_depend>
  <build_depend>tf2</build_depend>
  <build_depend>tf2_ros</build_depend>
  <build_depend>rclcpp</build_depend>
  
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <cpp cflags="-I${prefix}/include" lflags="-L${prefix}/lib -lodo"/>
    <build_type>ament_cmake</build_type>
  </export>

</package>
