<?xml version="1.0"?>
<?xml-model
  href="http://download.ros.org/schema/package_format3.xsd"
  schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>volksbot</name>
  <version>0.0.1</version>
  <description>volksbot</description>
  <maintainer email="borrmann@informatik.uni-wuerzburg.de">Dorit Borrmann</maintainer>
  <license>BSD</license>
  <url>http://ros.org/wiki/volksbot</url>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>std_msgs</depend>
  <depend>volksbot_interfaces</depend>
  <depend>std_srvs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <build_depend>tf2_geometry_msgs</build_depend>
  <build_depend>move_base</build_depend>
  <build_depend>tf2</build_depend>
  <build_depend>tf2_ros</build_depend>
  <build_depend>rclcpp</build_depend>
  <exec_depend>amcl</exec_depend>
  <exec_depend>gmapping</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <cpp cflags="-I${prefix}/include" lflags="-L${prefix}/lib -lodo"/>
    <build_type>ament_cmake</build_type>
  </export>

</package>
