cmake_minimum_required(VERSION 3.8)
project(volksface)

if(CMAKE_COMPILER_IS_GNUCXX OR CMAKE_CXX_COMPILER_ID MATCHES "Clang")
  add_compile_options(-Wall -Wextra -Wpedantic)
endif()

# find dependencies
find_package(ament_cmake REQUIRED)
find_package(rosidl_default_generators REQUIRED)
find_package(std_msgs REQUIRED)

set(msg_files
  "msg/Gamepad.msg"
  "msg/GpThumbStick.msg"
  "msg/Pose2d.msg"
  "msg/Ticks.msg"
  "msg/Vel.msg"
)

set(srv_files
  "srv/Rumble.srv"
  "srv/Velocities.srv"
)

rosidl_generate_interfaces(${PROJECT_NAME}
  ${msg_files}
  ${srv_files}
  DEPENDENCIES std_msgs 
  # DEPENDENCIES geometry_msgs # Add packages that above messages depend on, in this case geometry_msgs for Sphere.msg
)

ament_package()
